--- a/index.html
+++ b/index.html
@@ -1,41 +1,7 @@
 <html>
 <head>
-  <link  rel="stylesheet" type="text/css" href="/static/basscss.css">
-  <style text="text/css">
-    html, body {
-      padding: 0;
-      margin: 0;
-    }
-
-    .stateBox {
-      padding-top: 30px;
-    }
-
-    .currentBox {
-      background: #f1f1f1;
-      padding-top: 20px;
-      padding-bottom: 20px;
-    }
-
-    .controller {
-      width: 30%;
-      margin-left: 14%;
-      text-align: center;
-      float: left;
-      margin-top: 5%;
-
-    }
-
-    .button {
-      margin: 10px;
-      width: 150px;
-    }
-
-    .highlight {
-      background: #666;
-    }
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="/static/basscss.css">
+  <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 <body>
   <center>
