fix static folder position

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="/static/basscss.css">
-  <link rel="stylesheet" type="text/css" href="/static/style.css">
+  <link rel="stylesheet" type="text/css" href="/basscss.css">
+  <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
   <center>
@@ -28,8 +28,8 @@
     <button class="button" id="down">Down</button>
   </div>
 </div>
-<script src="/static/keyboard.js"></script>
-<script src="/static/jquery.js"></script>
+<script src="/keyboard.js"></script>
+<script src="/jquery.js"></script>
 <script src="/bundle.js"></script>
 </body>
 </html>
