left bar update

--- a/static/index.html
+++ b/static/index.html
@@ -10,10 +10,13 @@
   </div>
   <div class="col col-3">
     <div class="leftbar">
-      <label for="name">Name</label>
-      <input id="nameField" />
+      <div class="name">
+        <label for="name">Name</label>
+        <input id="nameField" />
+      </div>
 
       <div id="votes"></div>
+      <div class="peopleCount">People count: <span id="connected"></span></div>
     </div>
   </div>
   <div class="col col-8">
